# optics-rs

./: CHANGELOG.md  Cargo.toml  README.md  check.sh  release.sh
.github/workflows/: ci.yml
examples/: extend_with_increment.rs  extend_with_some_prism.rs  opaque.rs  simple.rs  test_marking.rs
src/: fallible_iso.rs  iso.rs  lens.rs  lib.rs  optic.rs  prism.rs  test.rs  traversal.rs
src/base/: getter.rs  mod.rs  partial_getter.rs  partial_reversible.rs  reversible.rs  setter.rs  total_getter.rs  total_reversible.rs
src/extensions/: mod.rs  over.rs  total_getter.rs  total_reverse_get.rs
src/fallible_iso/: composed.rs  mapped.rs  mod.rs  wrapper.rs
src/getter/: composed.rs  mapped.rs  mod.rs  wrapper.rs
src/iso/: composed.rs  mapped.rs  mod.rs  wrapper.rs
src/lens/: composed.rs  mapped.rs  mod.rs  wrapper.rs
src/optics/: mod.rs
src/optics/fallible_iso/: composed.rs  mapped.rs  mod.rs  wrapper.rs
src/optics/getter/: composed.rs  mapped.rs  mod.rs  wrapper.rs
src/optics/iso/: composed.rs  mapped.rs  mod.rs  wrapper.rs
src/optics/lens/: composed.rs  mapped.rs  mod.rs  wrapper.rs
src/optics/partial_getter/: composed.rs  mapped.rs  mod.rs  wrapper.rs
src/optics/prism/: composed.rs  enum_prism.rs  mapped.rs  mod.rs  wrapper.rs
src/optics/setter/: mod.rs  (+3 more)
src/partial_getter/: composed.rs  mapped.rs  mod.rs  wrapper.rs
src/partial_reversible/: mod.rs
src/prism/: composed.rs  mapped.rs  mod.rs  wrapper.rs
src/reversible/: mod.rs
src/setter/: composed.rs  mapped.rs  mod.rs  wrapper.rs
src/test/: code_quality.rs  fixtures.rs  helpers.rs  mod.rs
(+3 files in other folders)
